// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Navigation matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <nav
      class="navbar navbar-expand-md"
    >
      <a
        aria-current="page"
        class="navbar-brand active"
        href="/"
      >
        Jobly
      </a>
      <ul
        class="ml-auto navbar-nav"
      >
        <li
          class="nav-item"
        >
          <a
            href="/companies"
          >
            Companies
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            href="/jobs"
          >
            Jobs
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            href="/profile"
          >
            Profile
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            aria-current="page"
            class="logout active"
            href="/"
          >
            Logout
          </a>
        </li>
      </ul>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Testing the Navigation matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div>
    <nav
      class="navbar navbar-expand-md"
    >
      <a
        aria-current="page"
        class="navbar-brand active"
        href="/"
      >
        Jobly
      </a>
      <ul
        class="ml-auto navbar-nav"
      >
        <li
          class="nav-item"
        >
          <a
            href="/login"
          >
            Login
          </a>
        </li>
      </ul>
    </nav>
  </div>
</DocumentFragment>
`;
